exp1/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | VarDec LB error RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec
   26         | error COMMA
   27         | error RP

   28 CompSt: LC DefList StmtList RC
   29       | LC error RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | IF LP Exp RP error ELSE Stmt
   38     | WHILE LP Exp RP Stmt

   39 DefList: Def DefList
   40        | %empty

   41 Def: Specifier DecList SEMI
   42    | STAR DIV
   43    | error SEMI

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Dec: VarDec
   47    | VarDec ASSIGNOP Exp

   48 Exp: Exp ASSIGNOP Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp RELOP Exp
   52    | Exp PLUS Exp
   53    | Exp MINUS Exp
   54    | Exp STAR Exp
   55    | Exp DIV Exp
   56    | LP Exp RP
   57    | LP error RP
   58    | MINUS Exp
   59    | NOT Exp
   60    | ID LP Args RP
   61    | ID LP error RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp LB error RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT

   69 Args: Exp COMMA Args
   70     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 19 22 26 27 29 37 43 57 61 64
INT (258) 18 67
FLOAT (259) 68
ID (260) 14 16 17 20 21 60 61 62 65 66
PLUS (261) 52
MINUS (262) 53 58
STAR (263) 42 54
DIV (264) 42 55
DOT (265) 65
SEMI (266) 4 5 7 32 34 41 43
COMMA (267) 9 23 26 45 69
ASSIGNOP (268) 47 48
RELOP (269) 51
AND (270) 49
OR (271) 50
NOT (272) 59
LP (273) 20 21 35 36 37 38 56 57 60 61 62
RP (274) 20 21 22 27 35 36 37 38 56 57 60 61 62
LB (275) 18 19 63 64
RB (276) 18 19 63 64
LC (277) 12 28 29
RC (278) 12 28 29
IF (279) 35 36 37
ELSE (280) 36 37
WHILE (281) 38
STRUCT (282) 12 13
RETURN (283) 34
TYPE (284) 10
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7, on right: 2
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 25 41
StructSpecifier (37)
    on left: 12 13, on right: 11
OptTag (38)
    on left: 14 15, on right: 12
Tag (39)
    on left: 16, on right: 13
VarDec (40)
    on left: 17 18 19, on right: 8 9 18 19 25 46 47
FunDec (41)
    on left: 20 21 22, on right: 6
VarList (42)
    on left: 23 24, on right: 20 23
ParamDec (43)
    on left: 25 26 27, on right: 23 24
CompSt (44)
    on left: 28 29, on right: 6 33
StmtList (45)
    on left: 30 31, on right: 28 30
Stmt (46)
    on left: 32 33 34 35 36 37 38, on right: 30 35 36 37 38
DefList (47)
    on left: 39 40, on right: 12 28 39
Def (48)
    on left: 41 42 43, on right: 39
DecList (49)
    on left: 44 45, on right: 41 45
Dec (50)
    on left: 46 47, on right: 44 45
Exp (51)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68, on right: 32 34 35 36 37 38 47 48 49 50 51 52 53 54 55
    56 58 59 63 64 65 69 70
Args (52)
    on left: 69 70, on right: 60 69


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 3

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   22 FunDec: error . RP

    RP  shift, and go to state 22


State 16

   17 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 17 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 27

    CompSt  go to state 28


State 21

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 29
    STAR    shift, and go to state 30
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    RC  reduce using rule 40 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 32
    Def              go to state 33


State 22

   22 FunDec: error RP .

    $default  reduce using rule 22 (FunDec)


State 23

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    error   shift, and go to state 34
    RP      shift, and go to state 35
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 37
    ParamDec         go to state 38


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 39

    ExtDecList  go to state 40
    VarDec      go to state 19


State 26

   18 VarDec: VarDec LB . INT RB
   19       | VarDec LB . error RB

    error  shift, and go to state 41
    INT    shift, and go to state 42


State 27

   28 CompSt: LC . DefList StmtList RC
   29       | LC . error RC

    error   shift, and go to state 43
    STAR    shift, and go to state 30
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)
    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 44
    Def              go to state 33


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   43 Def: error . SEMI

    SEMI  shift, and go to state 45


State 30

   42 Def: STAR . DIV

    DIV  shift, and go to state 46


State 31

   41 Def: Specifier . DecList SEMI

    ID  shift, and go to state 39

    VarDec   go to state 47
    DecList  go to state 48
    Dec      go to state 49


State 32

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 50


State 33

   39 DefList: Def . DefList

    error   shift, and go to state 29
    STAR    shift, and go to state 30
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)
    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 51
    Def              go to state 33


State 34

   26 ParamDec: error . COMMA
   27         | error . RP

    COMMA  shift, and go to state 52
    RP     shift, and go to state 53


State 35

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 36

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 39

    VarDec  go to state 54


State 37

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 55


State 38

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 56

    $default  reduce using rule 24 (VarList)


State 39

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 40

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 41

   19 VarDec: VarDec LB error . RB

    RB  shift, and go to state 57


State 42

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 58


State 43

   29 CompSt: LC error . RC
   43 Def: error . SEMI

    SEMI  shift, and go to state 45
    RC    shift, and go to state 59


State 44

   28 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    MINUS   shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65
    LC      shift, and go to state 27
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67
    RETURN  shift, and go to state 68

    $default  reduce using rule 31 (StmtList)

    CompSt    go to state 69
    StmtList  go to state 70
    Stmt      go to state 71
    Exp       go to state 72


State 45

   43 Def: error SEMI .

    $default  reduce using rule 43 (Def)


State 46

   42 Def: STAR DIV .

    $default  reduce using rule 42 (Def)


State 47

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB
   46 Dec: VarDec .
   47    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 73
    LB        shift, and go to state 26

    $default  reduce using rule 46 (Dec)


State 48

   41 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 74


State 49

   44 DecList: Dec .
   45        | Dec . COMMA DecList

    COMMA  shift, and go to state 75

    $default  reduce using rule 44 (DecList)


State 50

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 51

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


State 52

   26 ParamDec: error COMMA .

    $default  reduce using rule 26 (ParamDec)


State 53

   27 ParamDec: error RP .

    $default  reduce using rule 27 (ParamDec)


State 54

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 25 (ParamDec)


State 55

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 56

   23 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 34
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 76
    ParamDec         go to state 38


State 57

   19 VarDec: VarDec LB error RB .

    $default  reduce using rule 19 (VarDec)


State 58

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 59

   29 CompSt: LC error RC .

    $default  reduce using rule 29 (CompSt)


State 60

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


State 61

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


State 62

   60 Exp: ID . LP Args RP
   61    | ID . LP error RP
   62    | ID . LP RP
   66    | ID .

    LP  shift, and go to state 77

    $default  reduce using rule 66 (Exp)


State 63

   58 Exp: MINUS . Exp

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 78


State 64

   59 Exp: NOT . Exp

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 79


State 65

   56 Exp: LP . Exp RP
   57    | LP . error RP

    error  shift, and go to state 80
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 81


State 66

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt
   37     | IF . LP Exp RP error ELSE Stmt

    LP  shift, and go to state 82


State 67

   38 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 83


State 68

   34 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 84


State 69

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 70

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 85


State 71

   30 StmtList: Stmt . StmtList

    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    MINUS   shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65
    LC      shift, and go to state 27
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67
    RETURN  shift, and go to state 68

    $default  reduce using rule 31 (StmtList)

    CompSt    go to state 69
    StmtList  go to state 86
    Stmt      go to state 71
    Exp       go to state 72


State 72

   32 Stmt: Exp . SEMI
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . LB error RB
   65    | Exp . DOT ID

    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    DOT       shift, and go to state 91
    SEMI      shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    RELOP     shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97


State 73

   47 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 98


State 74

   41 Def: Specifier DecList SEMI .

    $default  reduce using rule 41 (Def)


State 75

   45 DecList: Dec COMMA . DecList

    ID  shift, and go to state 39

    VarDec   go to state 47
    DecList  go to state 99
    Dec      go to state 49


State 76

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 77

   60 Exp: ID LP . Args RP
   61    | ID LP . error RP
   62    | ID LP . RP

    error  shift, and go to state 100
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    RP     shift, and go to state 101

    Exp   go to state 102
    Args  go to state 103


State 78

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   58    | MINUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . LB error RB
   65    | Exp . DOT ID

    STAR  shift, and go to state 89
    DIV   shift, and go to state 90
    DOT   shift, and go to state 91
    LB    shift, and go to state 97

    $default  reduce using rule 58 (Exp)


State 79

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   59    | NOT Exp .
   63    | Exp . LB Exp RB
   64    | Exp . LB error RB
   65    | Exp . DOT ID

    DOT  shift, and go to state 91
    LB   shift, and go to state 97

    $default  reduce using rule 59 (Exp)


State 80

   57 Exp: LP error . RP

    RP  shift, and go to state 104


State 81

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   56    | LP Exp . RP
   63    | Exp . LB Exp RB
   64    | Exp . LB error RB
   65    | Exp . DOT ID

    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    DOT       shift, and go to state 91
    ASSIGNOP  shift, and go to state 93
    RELOP     shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    RP        shift, and go to state 105
    LB        shift, and go to state 97


State 82

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . Exp RP Stmt ELSE Stmt
   37     | IF LP . Exp RP error ELSE Stmt

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 106


State 83

   38 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 107


State 84

   34 Stmt: RETURN Exp . SEMI
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . LB error RB
   65    | Exp . DOT ID

    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    DOT       shift, and go to state 91
    SEMI      shift, and go to state 108
    ASSIGNOP  shift, and go to state 93
    RELOP     shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97


State 85

   28 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


State 86

   30 StmtList: Stmt StmtList .

    $default  reduce using rule 30 (StmtList)


State 87

   52 Exp: Exp PLUS . Exp
